# attribution

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark.sh  pyproject.toml
experiments/: 00_human_eval.py  01_explore_solution_results.py  01_extract_code.py  02_01_single_benchmark_results.py  02_train_single_benchmark.py  03_multiple_benchmark_result.py  04_assess_multiple_benchmarks.py  04_olmo.py  05_compare_pass_rates.py  06_function_composition.py  07_analyze_cruxeval_results.py  07_causal_tracing.py  07_cruxeval_plots.py  07_evaluate_cruxeval.py  07_evaluate_olmo_models.sh  07_eyeball_cruxeval_accuracy.ipynb  07_plot_cruxeval_results.py  08_explore_olmo_sft_dataset.ipynb  10_download_checkpoints.py  10_download_checkpoints.sh  10_evaluate_base.sh  10_evaluate_instruct_.sh  10_grab_branches.py  10_instruct_benchmarks_eval.py  10_plot_base.py  10_test_revisions.py  11_test_activation_norm.py  12_test_correct_problems.py  assess_olmo_models.sh  benchmark.sh  code_llm.code-workspace  finetune.sh  get_multiplek_results.sh  multipleE_bigcode.sh
results/: generations_humanevalplus.json
results/NTQAI/Nxcode-CQ-7b-orpo/: evaluation_results.json
results/allenai/OLMo-7B-0724-Instruct-hf/: evaluation_results.json
src/: test_format.py
src/attribution/: __init__.py  benchmark.py  main.py  utils.py  vis.py
src/attribution/tune/: apps_train.py
