[project]
name = "attribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "bigcode-eval",
    "fastai>=2.7.18",
    "jupyterlab>=4.2.5",
    "llama-stack>=0.0.49",
    "lovely-tensors>=0.1.17",
    "matplotlib>=3.9.2",
    "nnsight>=0.3.6",
    "numpy>=2.1.2",
    "ruff>=0.7.2",
    "seaborn>=0.13.2",
    "transformers>=4.46.1",
]


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.4.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attribution"]

[tool.uv.sources]
bigcode-eval = { git = "https://github.com/bigcode-project/bigcode-evaluation-harness" }
